tests/rosetta/out/Rust/DNS-query.rs
// Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
fn main() {
    let res: Vec<i32> = net.LookupHost(String::from("www.kame.net"));
    let addrs = res[0];
    let err = res[1];
    if err == nil {
        println!("{}", vec![format!("{}", addrs.to_string())].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
    } else {
        println!("{}", vec![format!("{}", err)].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
    }
}
